# gameboy-emulator

./: .gitignore  CMakeLists.txt  build.bash  fullbuild.bash
.docker/: Dockerfile  run.bash
apps/: CMakeLists.txt  emulator.cpp
include/gameboy-emulator/core/: alu.hpp  bytelib.hpp  cpu.hpp  instructions.hpp  memory.hpp  motherboard.hpp
include/gameboy-emulator/graphics/: gpu.hpp  window.hpp
src/core/: CMakeLists.txt  alu.cpp  bytelib.cpp  cpu.cpp  instructions.cpp  memory.cpp  motherboard.cpp
src/graphics/: CMakeLists.txt  gpu.cpp  window.cpp
tests/: CMakeLists.txt  coretest.cpp
